# BuildCompiler

./: .readthedocs.yaml  ADR-001.md  AGENT.md  AGENTS.md  AGENTS_log.md  ARCHITECTURE.md  PRODUCT.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  python-package.yml
docs/: API_Reference.rst  Tutorials.rst  conf.py  development.rst  index.rst  installation.rst  notebooks.rst  quickstart.rst  requirements.txt  synbiosuite_integration.rst
docs/examples/: full_build.rst  offline_lvl1.rst  transformation_pudu.rst
files/: assemblyplan_output.json  files.md  run_sbol2assembly_libre.py
notebooks/: 01_install_and_setup.ipynb  02_planning_only_quickstart.ipynb  03_full_build_minimal.ipynb  04_options_and_safety.ipynb  05_stage_by_stage_guide.ipynb  abstract_assembly_plan.xml  abstract_design_notebook.ipynb  assembly_activity.xml  build_compiler_methods.ipynb  build_compiler_test.ipynb  buildcompiler_offline_quickstart.ipynb  buildcompiler_synbiohub_authenticated_tutorial.ipynb  buildcompiler_synbiohub_tutorial.ipynb  buildcompiler_transformation_quickstart.ipynb  comb_assembly_plan.xml  comb_design.ipynb  enzyme_creation.ipynb  full_build_quickstart.ipynb  full_build_workflow_examples.ipynb  generate_manual_assembly_protocol.py  impl_creation.ipynb  notebooks.md  test.xml  test_notebook.ipynb  transformation_activity.ipynb  transformation_activity.xml
notebooks/assembly_product_assembly_protocol/: assembly_product_assembly_plan.json  generate_manual_assembly_protocol.py  manual_assembly_protocol.md  manual_protocol_stdout.txt
notebooks/results/buildcompiler_offline_quickstart/: offline_domestication_artifacts.json  offline_domestication_products.xml  offline_domestication_pudu_input.json  offline_full_build_lvl2_domestication_stack_summary.json  offline_full_build_lvl2_missing_region_summary.json  offline_full_build_missing_part_summary.json  offline_lvl1_products.xml  offline_lvl1_pudu_input.json  offline_lvl2_products.xml  offline_lvl2_pudu_input.json  offline_lvl2_summary.json  offline_multi_1_products.xml  (+3 more)
src/buildcompiler/: __init__.py  abstract_translator.py  buildcompiler.py  constants.py  errors.py  plasmid.py  robotutils.py  sbol2build.py  transformation.py
src/sbol2build/: __init__.py  abstract_translator.py  robotutils.py  sbol2build.py  transformation.py
tests/: README.md  conftest.py  test_buildcompiler.py  test_buildcompiler_transformation.py  test_core.py  test_full_build.py  test_helpers.py  test_package_scaffolding.py  test_plating.py
tests/automation/: README.md  test_opentrons_simulation_optional.py
tests/integration/: test_full_build_happy_path.py  test_legacy_offline_fixtures.py  test_lvl1_plan_execute_constraints.py  test_missing_lvl1_then_domestication.py
tests/stages/: test_domestication.py  test_stage_assembly_lvl1.py  test_stage_assembly_lvl2.py
tests/test_files/: CIDARMoCloParts_collection.xml  CIDARMoCloPlasmidsKit_collection.xml  DVK_AE.xml  Enzyme_Implementations_collection.xml  ExampleLvl2_design.xml  abstract_design.xml  comp_tu.xml  impl_test_collection.xml  moclo_parts_circuit.xml  mocloparts116.xml  pB0015_DE.xml  pB0032_BC.xml  pE0040_CD.xml  pJ23100_AB.xml  transformation_activity.xml  transformation_activity_new.xml
tests/unit/: test_core_imports.py
tools/: update_api_reference.py
(+126 files in other folders)
