[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synbio-buildcompiler"
version = "0.0.a1"
description = "BuildCompiler is an open-source tool that bridges the Design and Build stages of the Synthetic Biology DBTL cycle"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
keywords = ["SBOL", "genetic", "automation", "build", "synthetic biology"]
authors = [
  { name="Gonzalo Vidal", email="gonzalo.vidalpena@colorado.edu" },
  { name="Ryan Greer", email="ryan.greer@colorado.edu" }
]
maintainers = [
  { name = "Ryan Greer", email = "ryan.greer@colorado.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sbol2",
    "biopython", 
    "pydna"
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]"
]
automation = [
  "pudupy",
  "opentrons",
  "SBOLInventory @ git+https://github.com/DRAGGON-Lab/SBOLInventory.git ; python_version >= '3.10'",
]

[project.urls]
"Homepage" = "https://github.com/MyersResearchGroup/BuildCompiler"
"Bug Tracker" = "https://github.com/MyersResearchGroup/BuildCompiler/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
